# numerical_methods

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  interface.py  monte_carlo.py
CSR3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
CSR4/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
include/: rk.h
lab2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  solver.cpp  solver.h
lab3/: CMakeLists.txt  lab3_part2.pro.user.5b0b320  lab3_part2_double.pro  lab3_part2_double.pro.user.5b0b320  lab3_step1.pro  main.cpp  mainwindow.cpp  mainwindow.h  solver.cpp  solver.h
lab4/: CMakeLists.txt  functions.cpp  functions.h  main.cpp  mainwindow.cpp  mainwindow.h  solver.cpp  solver.h
nummethods/: CMakeLists.txt  CMakeLists.txt.user.a98d50c  main.cpp  mainwindow.cpp  mainwindow.h
source/: CMakeLists.txt  Source.cpp
test/: CMakeLists.txt  test_rk.cpp
